client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

* {
  font-family: 'Poppins', sans-serif;
}

.poppins-light {
  font-weight: 300;
}

.poppins-regular {
  font-weight: 400;
}

.poppins-medium {
  font-weight: 600;
}

.poppins-bold {
  font-weight: 700;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.font-size-medium {
  font-size: 14px;
}

.font-size-large {
  font-size: 20px;
}

.gradient-bg {
  background: #28A851;
  width: 100%;
  min-height: 100vh;
  background-size: cover;
  background-attachment: fixed;
}

.signInWrapper {
  height: 500px;
  width: 750px;
  border-radius: 40px;
  background-color: white;
  position: fixed;
  top: 50%;
  left: 50%;
  /* bring your own prefixes */
  transform: translate(-50%, -50%);
  padding: 70px 50px 70px 50px;
  display: flex;
  flex-direction: row;
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
}

.main-login-content {
  width: 60%;
  margin-right: 50px;
}

.padding-bottom-small {
  padding-bottom: 15px;
}


.login-img {
  width: 100%;
  height: auto;
  margin: -70px -50px -70px 0;
  border-radius: 0 40px 40px 0;
  background-image: url("./images/First-Tee-coaches.jpg");
  background-size: cover;
  background-position: center;

}



@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App {
  position: relative;
  width: 100%;

}



.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.side-margins {
  margin-left: 5vw;
  margin-right: 5vw;
}

.card-container {
  box-shadow: 0 4px 10px 10px rgba(0, 0, 0, 0.05);
  padding: 8px 25px 25px 25px;
  border-radius: 25px;
  height: auto;
}

.card p,
.card label,
.card button,
.card-container h2 {
  font-size: 16px;
}

.main-margin {
  margin-left: 10vw;
  margin-right: 10vw;
  width: full;
}

#coach-sessions {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.class-title {
  padding-top: 7px;
  padding-left: 10px;
  font-weight: bold;
}

.student-num {
  padding-left: 10px;
  padding-bottom: 7px;
  padding-right: 2em;
}

.name-header {
  color: #14A849;
  font-weight: bold;
}

.unauthorized {
  color: #14A849;
  white-space: nowrap;
}

.your-class-header {
  font-weight: normal;
  color: gray;
}

.class-text {
  flex-grow: 1;
  min-width: 0;
}

.class-button {
  justify-content: space-between;
  flex-wrap: wrap;
}

.c-btn {
  border: none;
  background-color: #152942;
  padding: 35px;
  border-radius: 50%;
  color: #fff;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='25' viewBox='0 0 7.41 12'%3E%3Cpath d='M10,6,8.59,7.41,13.17,12,8.59,16.59,10,18l6-6Z' transform='translate(-8.59 -6)' fill='%23fff'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
}

.c-btn:hover,
.send-button:hover,
.view-button:hover {
  background-color: #28A851;
}

.c-btn:active {
  box-shadow: -1px -1px 1px #000;
}

.class-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.margin-bottom-large {
  margin-bottom: 50px;
}

.margin-top-large {
  margin-top: 50px;
}

hr {
  margin-left: -25px;
  margin-right: -25px;
}

.send-button {
  padding: 10px 20px;
  margin-bottom: 20px;
  line-height: normal;
  background-color: #152942;
  border-radius: 4px;
  text-align: center;
  color: white;
  align-self: center;
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
  border: none;
  cursor: pointer;
}

.send-button:active {
  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.3);
  transform: translateY(1px);
}

.view-button {
  width: 75%;
  margin-bottom: 20px;
  line-height: 50px;
  background-color: #152942;
  border-radius: 4px;
  text-align: center;
  color: white;
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);

}

.message-container {
  padding-bottom: 40px;
}

.view-button:active {
  box-shadow: -1px -1px 1px #000;
}


form {
  display: flex;
  flex-direction: column;
}

.bottom-bar {
  margin-top: auto;
  width: 100%;
  background-color: #DEF9E6;
  padding: 20px 10vw 20px 10vw;
  box-sizing: border-box;

}

.top-bar {
  background-color: #DEF9E6;
  padding: 20px 10vw 20px 10vw;
}

.top-bar-content,
.bottom-bar-content {
  position: relative;
}

.top-bar-content img,
.bottom-bar-content img {
  width: 200px;
}

.top-bar button,
.bottom-bar-content button {
  position: absolute;
  padding: 5px 10px 5px 10px;
  border-radius: 5px;
  right: 0;
  background-color: #152942;
  color: white;
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
}

.top-bar button:active {
  box-shadow: -1px -1px 1px #000;
}

.top-bar button:hover {
  background-color: #28A851;
}


.top-bar a,
.bottom-bar a {
  position: absolute;
  padding: 5px 10px 5px 10px;
  right: 0;
  color: #14A849;
}

.email-button {
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-right: 5em;
}

.fa-envelope {
  color: #152942;
}

.back-button {
  text-decoration: none;
  color: #152942;
}

.success-msg {
  color: #14A849;
}

.flex-wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  justify-content: flex-start;
}

.icon-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.icon-text-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.icon-text-container span {
  margin-top: 8px;
}

html, body {
  width: 100%;
  overflow-x: hidden; /* Prevent horizontal scrolling */
  margin: 0;
  padding: 0;
}

.App {
  overflow-x: hidden; /* Prevent any horizontal overflow in the main App component */
}

/* Ensure that all containers do not exceed the viewport width */
.container, .card-container, .gradient-bg, .signInWrapper, .main-margin, .side-margins {
  max-width: 100vw;
  box-sizing: border-box; /* Include padding and borders in the element's total width */
}

html, body {
  width: 100%;
  overflow-x: hidden; /* Prevent horizontal scrolling */
  margin: 0;
  padding: 0;
}

.App {
  overflow-x: hidden; /* Prevent any horizontal overflow in the main App component */
}

/* Ensure that all containers do not exceed the viewport width */
.container, .card-container, .gradient-bg, .signInWrapper, .main-margin, .side-margins {
  max-width: 100vw;
  box-sizing: border-box; /* Include padding and borders in the element's total width */
}


@media only screen and (max-width: 800px) {
  html, body {
    overflow-x: hidden;
    margin: 0;
    padding: 0;
    height: 100vh;
  }

  .gradient-bg {
  
    background: url("./images/CoachesFirstTee.png") no-repeat center center fixed;
    background-size: cover;
  }

  .signInWrapper {
    position: fixed;
    bottom: 0;
    left: 0;
    transform: translateX(0%);
    width: 100%;
    height: 75vh;
    border-radius: 60px 60px 0 0;
    padding: 4vw 2vw;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: -20px;
    padding-top: 20vh;
    padding-bottom: 50vh;
  }

  .signInWrapper img {
    max-width: 80%;
    height: auto;
    padding-top: 5vh;
  }

  .main-login-content {
    width: 90%;
    max-width: 500px;
    text-align: center;
    margin-left: 15%;
  }

  .main-login-content h1 {
    font-size: 6vw;
    text-align: left;
    margin: 1vw 0;
  }

  .main-login-content .your-class-header {
    font-size: 4vw;
    text-align: left;
    margin: 1vw 0 2vw;
  }

  #signInDiv {
    width: 100%;
  }

  .login-img {
    display: none;
  }

  .main-margin, .class-content, .email-button, .view-button, .card-container {
    margin: 0vw;
    padding: 2vw;
  }

  .card p,
  .card label,
  .card button,
  .card-container h2 {
    font-size: 4vw;
  }

  .class-text, .email-button {
    margin-bottom: 1em;
  }
}

